# tamahagane

./: .editorconfig  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
implementors/tamahagane/: trait.Scalar.js
src/: array_index.rs  error.rs  lib.rs  linalg.rs  order.rs  routine.rs  slice.rs  slice_info.rs  util.rs
src/array/: fmt.rs  iter.rs  linarg.rs  mod.rs  ops.rs  routine.rs
src/dimension/: mod.rs  ops.rs
src/shape/: mod.rs  new_shape.rs  signed_shape.rs
src/storage/: cow.rs  mod.rs  owned.rs  routine.rs  shared.rs  view.rs
src/tamahagane/: array_index.rs.html  error.rs.html  lib.rs.html  linalg.rs.html  order.rs.html  routine.rs.html  (+3 more)
tamahagane/: all.html  enum.ArrayIndex.html  enum.Error.html  enum.ShapeError.html  index.html  macro.array.html  macro.dyn_s!.html  macro.dyn_s.html  macro.s.html  sidebar-items.js  struct.Array.html  struct.ArrayBase.html  struct.ColumnMajor.html  struct.DimDiff.html  struct.DynDim.html  struct.DynDimDiff.html  struct.Iter.html  struct.IterMut.html  struct.NDims.html  struct.NewAxis.html  struct.RowMajor.html  struct.Slice.html  struct.SliceInfo.html  trait.Dimensionality.html  trait.DimensionalityAdd.html  trait.DimensionalityAfterDot.html  trait.DimensionalityDiff.html  trait.DimensionalityMax.html  trait.Dot.html  trait.NDArray.html  trait.NDArrayMut.html  trait.NDArrayOwned.html  trait.NewShape.html  trait.Order.html  trait.Scalar.html  trait.Shape.html  trait.SignedShape.html  type.Array.html  type.Result.html
(+108 files in other folders)
